[package]
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
name = "csv-query-rs"
description = "Make SQL queries on CSV files"
version = "0.2.0"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "*"
csv = "*"
error-chain = "*"
rusqlite = "*"

[lib]
name = "csv_query"
path = "src/lib.rs"

[[bin]]
name = "csv-query"
path = "src/main.rs"
