[package]
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
name = "csv-query"
description = "Make SQL queries on CSV files"
version = "0.3.0"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "2.32.0"
csv = "1.0.0"
error-chain = "0.12.0"
rusqlite = "0.13.0"

[lib]
name = "csv_query"
path = "src/lib.rs"

[[bin]]
name = "csv-query"
path = "src/main.rs"
