[package]
name = "csv-query-cli"
version = "0.5.0"
description = "Make SQL queries on CSV files (cli)"
license = "MIT"
readme = "../README.md"

authors = ["Jayson Reis <santosdosreis@gmail.com>"]

[dependencies]
clap = "^2.32.0"
csv-query = "^0.5.0"
directories = "^1.0.1"
error-chain = "^0.12.0"
rustyline = "^6.0.0"

[features]
sqlite_bundled = ["csv-query/sqlite_bundled"]

[[bin]]
name = "csv-query"
path = "src/main.rs"
