[package]
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
name = "csv-query"
description = "Make SQL queries on CSV files"
version = "0.5.0"
license = "MIT"
readme = "../README.md"

[dependencies]
csv = "^1.0.0"
error-chain = "^0.12.0"
rusqlite = { version = "^0.14.0", features = ["backup"] }

[features]
sqlite_bundled = ["rusqlite/bundled"]

[lib]
name = "csv_query"
path = "src/lib.rs"
